--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,11 @@
 cloud.aws.credentials.accessKey={accessKey}
 cloud.aws.credentials.secretKey={secretKey}
 
-# example : ap-northeast-1
-cloud.aws.region={region}
+# Use this if deploying on EC2
+# cloud.aws.region=[region]
+
+# Use this if running outside of EC2
+cloud.aws.region.static=[region]
 
 # example : s3-bucket-test-1
 cloud.aws.s3.bucket={bucket}
