updating configuration to support both EC2 and non-EC2 execution

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 # you can get into iam page [https://console.aws.amazon.com/iam/home]
-cloud.aws.credentials.accessKey={accessKey}
-cloud.aws.credentials.secretKey={secretKey}
+cloud.aws.credentials.accessKey=[accessKey]
+cloud.aws.credentials.secretKey=[secretKey]
 
-# Use this if deploying on EC2
-# cloud.aws.region=[region]
+# Uses this if deploying on EC2
+cloud.aws.region=[ec2 region]
 
-# Use this if running outside of EC2
-cloud.aws.region.static=[region]
+# Uses this if running outside of EC2
+cloud.aws.region.static=[non-ec2-region]
 
 # example : s3-bucket-test-1
-cloud.aws.s3.bucket={bucket}
+cloud.aws.s3.bucket=[bucket]
